# deb_scripts

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  bbr_install.py  compose.yml  fail2ban_install.py  format.sh  main.py  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: release-on-tag.yml
app/: run.py
app/bootstrap/: args.py  permissions.py  update_os.py
app/core/: service_registry.py  status.py  subprocess.py
app/i18n/: locale.py  messages.py
app/interactive/: bbr.py  docker.py  fail2ban.py
app/services/: bbr.py  docker.py  fail2ban.py  protocols.py  traffic_guard.py  ufw.py  uv.py
app/utils/: README.md  __init__.py  args_utils.py  logger.py  permission_utils.py  service_registry.py  status_text.py  subprocess_utils.py  update_utils.py
docs/en/: README.md
docs/ru/: README.md
scripts/: bbr.py  bbr_install.py  docker.py  fail2ban.py  run.py  ssh_agent_systemd_keepassxc.py  uv.py
tests/: README.md  conftest.py
tests/integration/: test_integration.py  test_interactive_interfaces.py
tests/system/: README.md  __init__.py  test_bbr_service_system.py  test_docker_service_system.py  test_fail2ban_service_system.py  test_system_commands.py  test_ufw_system.py
tests/unit/: test_args_utils.py  test_bbr_service.py  test_cli_mode.py  test_docker_service.py  test_fail2ban_service.py  test_fail2ban_service_fixed.py  test_interactive_run.py  test_interactive_status_menus.py  test_logger.py  test_main.py  test_main_components.py  test_permission_utils.py  test_service_registry.py  (+8 more)
utils/: subprocess_utils.py
(+29 files in other folders)
