[project]
name = "deb-scripts"
version = "2.1.0"
description = "DevOps Automation Scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "system: marks tests as system tests",
    "slow: marks tests as slow running",
]
